[package]
name = "proc"
version = "0.1.0"
authors = ["Sam Rose <hello@samwho.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
bytes = "0.5"
anyhow = "1"
regex = "1"
lazy_static = "1"
hex = "0.4"
bitfield = "0.13"
nix = "0.18"
maplit = "1"
rayon = "1"
once_cell = "1"
string-interner = "0.12"
lasso = { version = "0.3", features = ["multi-threaded"] }

[dev-dependencies]
pretty_assertions = "0.6"